# deepanal

./: .gitignore  LICENSE  README.md  deepanal.py  pyproject.toml
assets/: Marsh McLennan DeepAnal_report.md  graph.txt
src/: graph.py  processors.py  researchers.py  schemas.py
temp/: fallback_llm.py  pydantic_model.py  tavily_client_test.py
